--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -6,15 +6,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Achiveminds</title>
-    <link href="https://fonts.googleapis.com/css?family=Cardo:400,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Tinos:400,700&display=swap" rel="stylesheet">
+    <title>Harveys All Naturals</title>
+    <link rel="stylesheet" href="https://use.typekit.net/vuf5pxm.css">
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
   </head>
 <body>
 
 {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
-{{> header}}
+<!-- {{> header}} -->
 
 {{> body}}
 
