--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,8 +1,9 @@
 <section id="contact" class="contact">
   <div class="grid-container">
-    <div class="grid-x grid-padding-x contact_grid">
-      <div class="cell medium-6 large-6 contact_form-container">
-        <h2>Contact Us</h2>
+    <div class="grid-x contact_grid">
+      <div class="cell medium-10 medium-offset-1 contact_form-container">
+        <h2>Talk To Harvey</h2>
+        <p>Questions about Harvey’s All Naturals? Want to get Harvey’s at your local store?</p>
         <form data-abide novalidate name="contact" method="POST" data-netlify="true" class="contact_form">
           <div data-abide-error class="alert callout" style="display: none;">
             <p><i class="fi-alert"></i> There are some errors in your form.</p>
@@ -48,12 +49,6 @@
             </div>
           </div>
         </form>
-      </div>
-
-      <div class="cell medium-6 large-6 contact_content">
-        <p>
-          We “people” often do not appreciate what we have and compare ourselves with other people or better times we have had. We often lose focus on the moment and either reflect on the past or look into the future. Everyone struggles more or less with certain situations and experiences in life, it is not only about how we act, it is also about how we react, and how we deal with arbitrary situations.
-        </p>
       </div>
     </div>
   </div>
