--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,24 +2,24 @@
   <div class="footer_upper">
     <div class="grid-container">
       <div class="grid-x footer_grid">
-        <div class="cell small-12 medium-5 footer_logo">
-          <img src="/assets/img/logo-dark.svg"/>
+        <div class="cell small-12 medium-9 footer_menu">
+          <a class="nav_link menu-item" href="#">The Harveys Difference</a>
+          <a class="nav_link menu-item" href="#">Our Products</a>
+          <a class="nav_link menu-item" href="#">CBD FAQs</a>
+          <a class="nav_link menu-item" href="#">Talk To Us</a>
         </div>
         
-        <div class="cell small-12 medium-3 medium-offset-1 footer_menu">
-          <a class="nav_link menu-item" href="#expertise">Achievements</a>
-          <a class="nav_link menu-item" href="#origin">The Origin</a>
-          <a class="nav_link menu-item" href="#athletes">Athletes</a>
-          <a class="nav_link menu-item" href="#news">Press</a>
+        <div class="cell small-12 medium-3 footer_logo">
+          <img src="/assets/img/logo.svg"/>
         </div>
-       
-        <div class="cell small-12 medium-3 footer_social">
-          <h4>Connect With Me</h4>
-          <nav class="social">
-            <a href="#"><i class="social_item facebook"></i></a>
-            <a href="https://www.instagram.com/esportspsychology/"><i class="social_item instagram"></i></a>
-            <a href="https://twitter.com/SportsPsycFaBro"><i class="social_item twitter"></i></a>            
-          </nav>
+      </div>
+
+      <div class="grid-x footer_disclaimer">
+        <div class="cell small-12">
+          <h3>Disclaimer</h3>
+          <p>
+            A full-spectrum, hemp derived CBD oil formulated to naturally sooth the mind and body from various daily stressors. This means when taken we can shine, supported by the non-psychoactive, stabilizing benefits of balanced daily wellbeing. For best results add our recommended dosage to your coffee, smoothie or drop directly underneath the tongue in the morning or day.
+          </p>
         </div>
       </div>
     </div>
@@ -28,7 +28,7 @@
     <div class="grid-container">
       <div class="grid-x">
         <div class="cell large-12">
-          <p>© 2019 Achievemind</p>
+          <p>© 2019 Harvey’s All Naturals | Privacy Policy</p>
         </div>
       </div>    
     </div>
