--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,25 +1,43 @@
 <section class="hero">
-    <div class="hero_image show-for-medium"></div>
-    <div class="hero_bg-element"></div>
-    <div class="grid-container">
-      <div class="grid-x grid-padding-x">
-        <div class="medium-6 cell">
-          <h1>From healthy lifestyle to peak performance</h1>
-          <img class="hero_mobile-image" src="/assets/img/mobile-hero-image.png" />
-        </div>
+  <div class="grid-container">
+    <div class="grid-x hero_top">
+      <div class="medium-12 cell">
+        <img class="hero_logo" src="/assets/img/logo.svg" />
+
+        <p> Harvey’s All Naturals provides premium farm-to-table full spectrum CBD products, derived from only the best quality hemp flower oil.</p>
       </div>
-  
-      <div class="grid-x">
-        <div class="large-9 small-10 cell hero_content">
-          <div class="hero_content-text">
-            <p>
-              We believe that the satisfaction within the person as well as their perception and lifestyle are the foundation of success. We want to get the best out of the client in order to have a more efficient, healthy and successful life.
-            </p>
+    </div>
+
+    <div class="grid-x hero_nav">
+      <div class="medium-12 cell">
+        <nav>
+          <div class="nav_item">
+            <a href="#">The Harveys Difference</a>
           </div>
-          <div class="hero_contact">
-            <a href="#contact" class="nav_link hero_link">Contact Me</a>
+          <div class="nav_item">
+            <a href="#">Our Products</a>
           </div>
+          <div class="nav_item">
+            <a href="#">CBD FAQs</a>
+          </div>
+          <div class="nav_item">
+            <a href="#">Talk To Us</a>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="grid-x hero_bottom">
+    <div class="small-8 small-offset-2 medium-4 medium-offset-4 cell">
+      <div class="info_card">
+        <div class="info_card-wrapper">
+          <img class="info_card-header" src="/assets/img/leadville_heading.svg" />
+          <p class="info_card-description">Settled 1859 / Population 2759</p>
+          <p>Once one of the most lawless towns in the West, Leadville is now the home of Harvey’s All Naturals.</p>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
