--- a/src/assets/scss/global/_typography.scss
+++ b/src/assets/scss/global/_typography.scss
@@ -1,7 +1,11 @@
 h1, h2, h3, h4, h5 {
-  font-weight: 900;
+  //font-weight: 900;
 }
 
 h2  {
   margin-bottom: 32px;
+}
+
+h3 {
+ font-weight: 700;
 }
