--- a/src/partials/faqs.html
+++ b/src/partials/faqs.html
@@ -11,7 +11,7 @@
           <ul class="accordion" data-accordion data-allow-all-closed="true">
             <li class="accordion-item" data-accordion-item>
               <!-- Accordion tab title -->
-              <a href="#" class="accordion-title">Accordion 1</a>
+              <a href="#" class="accordion-title">What is CBD and how does it work?</a>
           
               <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
               <div class="accordion-content" data-tab-content>
@@ -21,7 +21,7 @@
             </li>
             <li class="accordion-item" data-accordion-item>
               <!-- Accordion tab title -->
-              <a href="#" class="accordion-title">Accordion 1</a>
+              <a href="#" class="accordion-title">I’ve heard CBD can cure everything from hangovers to cancer? What gives?</a>
           
               <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
               <div class="accordion-content" data-tab-content>
@@ -31,7 +31,7 @@
             </li>
             <li class="accordion-item" data-accordion-item>
               <!-- Accordion tab title -->
-              <a href="#" class="accordion-title">Accordion 1</a>
+              <a href="#" class="accordion-title">What are terpenes and why do they matter?</a>
           
               <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
               <div class="accordion-content" data-tab-content>
@@ -41,7 +41,7 @@
             </li>
             <li class="accordion-item" data-accordion-item>
               <!-- Accordion tab title -->
-              <a href="#" class="accordion-title">Accordion 1</a>
+              <a href="#" class="accordion-title">Some CBD products say “Broad Spectrum” others“Full Spectrum” Which one better?</a>
           
               <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
               <div class="accordion-content" data-tab-content>
@@ -51,7 +51,27 @@
             </li>
             <li class="accordion-item" data-accordion-item>
               <!-- Accordion tab title -->
-              <a href="#" class="accordion-title">Accordion 1</a>
+              <a href="#" class="accordion-title">Hemp Flower Oil or Hemp Seed Oil? Isn’t is all hemp?</a>
+          
+              <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
+              <div class="accordion-content" data-tab-content>
+                <p>Panel 1. Lorem ipsum dolor</p>
+                <a href="#">Nowhere to Go</a>
+              </div>
+            </li>
+            <li class="accordion-item" data-accordion-item>
+              <!-- Accordion tab title -->
+              <a href="#" class="accordion-title">Where is Harvey’s All Natural’s grown and processed?</a>
+          
+              <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
+              <div class="accordion-content" data-tab-content>
+                <p>Panel 1. Lorem ipsum dolor</p>
+                <a href="#">Nowhere to Go</a>
+              </div>
+            </li>
+            <li class="accordion-item" data-accordion-item>
+              <!-- Accordion tab title -->
+              <a href="#" class="accordion-title">Become a member of the Harvey’s Promise</a>
           
               <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
               <div class="accordion-content" data-tab-content>
