--- a/src/assets/scss/partials/_about.scss
+++ b/src/assets/scss/partials/_about.scss
@@ -1,11 +1,15 @@
 .about {
-  padding-top: 150px;
-  padding-bottom: 150px;
+  position: relative;
+  z-index: 3;
+  top: -90px;
+  padding-top: 180px;
+  padding-bottom: 180px;
   background-size: cover;
   background-image: url('/assets/img/field_image.jpg');
   background-repeat: no-repeat;
   text-align: center;
-
+  clip-path: ellipse(100% 55% at 48% 44%);
+  
   h2 {
     color: white;
     font-size: rem-calc(44);
