--- a/src/assets/scss/partials/_faqs.scss
+++ b/src/assets/scss/partials/_faqs.scss
@@ -1,6 +1,8 @@
 .faqs {
   position: relative;
   padding-top: 100px;
+  z-index: 2;
+  top: -29px;
   padding-bottom: 180px;
   background-image: url('/assets/img/topography.png');
   background-size: contain;
@@ -8,7 +10,7 @@
   background-position: center center;
   background-attachment: fixed;
   background-color: $light-gray;
-
+  clip-path: ellipse(149% 52% at 57% 52%);
 
   .faqs_header {
     margin-bottom: 60px;
