--- a/src/assets/scss/partials/_hero.scss
+++ b/src/assets/scss/partials/_hero.scss
@@ -1,11 +1,14 @@
 .hero {
   position: relative;
+  z-index: 4;
   background-image: url('/assets/img/topography.png');
   background-size: contain;
   background-repeat: repeat;
   background-position: center center;
   background-attachment: fixed;
+  background-color: white;
   padding-bottom: 100px;
+  clip-path: ellipse(149% 58% at 75% 42%);
 
   .hero_top {
     padding-top: 30px;
