--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -64,6 +64,8 @@
 @include motion-ui-animations;
 
 @import 'vendor/owlcarousel';
+
+@import 'vendor/owlcarousel';
 @import 'util/mixins';
 @import 'global/typography';
 @import 'global/forms';
