--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -4,14 +4,16 @@
       <div class="cell medium-10 medium-offset-1 contact_form-container">
         <h2>Talk To Harvey</h2>
         <p>Questions about Harvey’s All Naturals? Want to get Harvey’s at your local store?</p>
-        <form data-abide novalidate name="contact" method="POST" data-netlify="true" class="contact_form">
+        <form data-abide novalidate action="https://formsubmit.co/ryan@peaktwo.com" method="post" name="contact" data-netlify="false" class="contact_form">
+          <input type="hidden" name="$to" value="ryan@peaktwo.com">
+          <input type="hidden" name="_next" value="https://harveys.netlify.com">
           <div data-abide-error class="alert callout" style="display: none;">
             <p><i class="fi-alert"></i> There are some errors in your form.</p>
           </div>
           <div class="grid-container">
             <div class="grid-x grid-margin-x">
               <div class="cell small-12">
-                <label>Email
+                <label>
                   <input type="text" name="email" placeholder="yourname@yahoo.com" aria-errormessage="example1Error1" required pattern="email">
                   <span class="form-error" id="example1Error1">
                     Please enter a valid email address.
@@ -19,7 +21,7 @@
                 </label>
               </div>
               <div class="cell small-12">
-                <label>Name
+                <label>
                   <input type="text" id="name" name="name" placeholder="Your Name" aria-errormessage="example1Error2" required >
                   <span class="form-error" id="example1Error2">
                     Please enter your name
@@ -29,7 +31,7 @@
             </div>
             <div class="cell small-12">
               <label>
-                Message
+                
                 <textarea rows="4" name="message" placeholder="Your message here..." aria-errormessage="example1Error3" required></textarea>
                 <span class="form-error" id="example1Error3">
                   Please enter your name
@@ -40,7 +42,7 @@
 
           <div class="grid-container">
             <div class="grid-x grid-margin-x">
-              <fieldset class="cell large-6">
+              <fieldset class="cell large-12">
                 <button class="button" type="submit" value="Submit">Submit</button>
               </fieldset>
               <!-- <fieldset class="cell large-6">
