Adding new map and making image updates

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="footer_upper">
     <div class="grid-container">
       <div class="grid-x footer_grid">
-        <div class="cell small-12 medium-9 footer_menu">
+        <div class="cell small-12 medium-9 footer_menu align-left">
           <a class="nav_link menu-item" href="#">The Harveys Difference</a>
           <a class="nav_link menu-item" href="#">Our Products</a>
           <a class="nav_link menu-item" href="#">CBD FAQs</a>
