--- a/src/assets/scss/partials/_faqs.scss
+++ b/src/assets/scss/partials/_faqs.scss
@@ -4,7 +4,7 @@
   z-index: 2;
   top: -29px;
   padding-bottom: 180px;
-  background-image: url('/assets/img/topography.png');
+  background-image: url('/assets/img/topographic_map.svg');
   background-size: contain;
   background-repeat: repeat;
   background-position: center center;
