--- a/src/assets/scss/partials/_hero.scss
+++ b/src/assets/scss/partials/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   position: relative;
   z-index: 4;
-  background-image: url('/assets/img/topography.png');
+  background-image: url('/assets/img/topographic_map.svg');
   background-size: contain;
   background-repeat: repeat;
   background-position: center center;
