Adding tree background images and making minor ui adjustments

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -70,6 +70,7 @@
 @import 'global/typography';
 @import 'global/forms';
 @import 'components/accordions';
+@import 'components/buttons';
 
 
 //Components
