--- a/src/assets/scss/partials/_about.scss
+++ b/src/assets/scss/partials/_about.scss
@@ -13,8 +13,8 @@
     background-attachment: fixed;
     top: -90px;
     padding-top: 180px;
-    padding-bottom: 180px;
-    clip-path: ellipse(100% 55% at 48% 44%);
+    //padding-bottom: 180px;
+    //clip-path: ellipse(100% 55% at 48% 44%);
   }
 
   h2 {
