--- a/src/partials/faqs.html
+++ b/src/partials/faqs.html
@@ -1,5 +1,9 @@
 <section class="faqs">
     <div class="grid-container">
+      <span class="bg-tree"></span>
+      <span class="bg-tree"></span>
+      <span class="bg-tree"></span>
+
       <div class="grid-x">
         <div class="medium-12 large-8 large-offset-2 cell faqs_header">  
           <h2>
