--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,7 @@
 <section class="hero">
   <div class="grid-container">
     <div class="grid-x hero_top">
+      <span class="bg-tree"></span>
       <div class="medium-12 cell">
         <img class="hero_logo" src="/assets/img/logo.svg" />
 
@@ -30,6 +31,12 @@
 
 
   <div class="grid-x hero_bottom">
+    <span class="bg-tree"></span>
+    <span class="bg-tree"></span>
+    <span class="bg-tree"></span>
+    <span class="bg-tree"></span>
+    <span class="bg-tree"></span>
+    <!-- <img src="/assets/img/tracks-1.svg" class="tracks-image"/> -->
     <div class="small-8 small-offset-2 medium-4 medium-offset-4 cell">
       <div class="info_card">
         <div class="info_card-wrapper">
