--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,5 +1,7 @@
 <section class="products">
   <div class="grid-container">
+    <span class="bg-tree"></span>
+    <span class="bg-tree"></span>
     <div class="grid-x grid-margin-x">
       <div class="medium-10 medium-offset-1 cell products_header" data-equalizer data-equalize-on="medium">
         <h2>
@@ -12,28 +14,37 @@
 
       <div class="medium-5 cell product_item" data-equalizer-watch>
         <img src="/assets/img/elixer-product-shot-1.jpg"/>
-        <h3>Harvey's CBD Elixer</h3>
-        <span class="product_sizing">500mg / 0.5 oz</span>
-        <p class="product_description" data-equalizer-watch>A full-spectrum, hemp derived CBD oil formulated to naturally sooth the mind and body from various daily stressors. This means when taken we can shine, supported by the non-psychoactive, stabilizing benefits of balanced daily wellbeing. For best results add our recommended dosage to your coffee, smoothie or drop directly underneath the tongue in the morning or day.</p>
-        <div class="product_meta">
-          <span class="product_price">$29.99</span>
-          <a href="#" class="button">Purchase</a>
+        <div class="product_item-content">
+          <h3>Harvey's CBD Elixer</h3>
+          <span class="product_sizing">500mg / 0.5 oz</span>
+          <p class="product_description" data-equalizer-watch>A full-spectrum, hemp derived CBD oil formulated to naturally sooth the mind and body from various daily stressors. This means when taken we can shine, supported by the non-psychoactive, stabilizing benefits of balanced daily wellbeing. For best results add our recommended dosage to your coffee, smoothie or drop directly underneath the tongue in the morning or day.</p>
+          <div class="product_meta">
+            <span class="product_price">$29.99</span>
+            <a href="#" class="button">Purchase <i class="arrow"></i></a>
+          </div>
         </div>
       </div>
 
       <div class="medium-5 medium-offset-2 cell product_item" data-equalizer-watch>
         <img src="/assets/img/salve-product-shot-1.jpg"/>
-        <h3>Harvey's CBD Healing Salve</h3>
-        <span class="product_sizing">500mg / 0.5 oz</span>
-        <p class="product_description" data-equalizer-watch></p>A full-spectrum, hemp derived CBD oil formulated to naturally sooth the mind and body from various daily stressors. This means when taken we can shine, supported by the non-psychoactive, stabilizing benefits of balanced daily wellbeing. For best results add our recommended.</p>
-        <div class="product_meta">
-          <span class="product_price">$29.99</span>
-          <a href="#" class="button">Purchase</a>
+        <div class="product_item-content">
+          <h3>Harvey's CBD Healing Salve</h3>
+          <span class="product_sizing">500mg / 0.5 oz</span>
+          <p class="product_description" data-equalizer-watch></p>A full-spectrum, hemp derived CBD oil formulated to naturally sooth the mind and body from various daily stressors. This means when taken we can shine, supported by the non-psychoactive, stabilizing benefits of balanced daily wellbeing. For best results add our recommended.</p>
+          <div class="product_meta">
+            <span class="product_price">$29.99</span>
+            <a href="#" class="button">Purchase <i class="arrow"></i></a>
+          </div>
         </div>
       </div>
     </div>
   </div>
   <div class="grid-x products_bottom">
+    <span class="bg-tree"></span>
+    <span class="bg-tree"></span>
+    <span class="bg-tree"></span>
+    <span class="bg-tree"></span>
+
     <div class="small-8 small-offset-2 medium-4 medium-offset-4 cell">
       <div class="info_card">
         <div class="info_card-wrapper">
