--- a/src/assets/scss/components/_accordions.scss
+++ b/src/assets/scss/components/_accordions.scss
@@ -6,7 +6,7 @@
   margin-bottom: 8px;
   background-color: white;
   @include default-border;
-  border: 1px solid $light-gray;
+  border: 1px solid $medium-gray;
 
   &:last-of-type {
     margin-bottom: 0px;
@@ -15,10 +15,12 @@
   .accordion-title {
     font-weight: 700;
     padding-left: 2rem;
+    line-height: 1.4em;
 
     &:before {
       left: 1rem;
       right: auto;
+      margin-top: -0.7rem;
     }
   }
 }
