--- a/src/assets/scss/partials/_footer.scss
+++ b/src/assets/scss/partials/_footer.scss
@@ -10,7 +10,7 @@
   .footer_grid {
     margin-bottom: 54px;
     padding: 32px 24px;
-    background-color: $off-white;
+    background-color: #f0f0f0;
 
     @include breakpoint(medium) {
       @include flex-align(center, middle);
@@ -103,5 +103,49 @@
     padding-top: 16px;
     padding-bottom: 16px;
     font-size: 16px;
+  }
+}
+
+.nav_link {
+  position: relative;
+  &:before,
+  &:after {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    border: 2px solid rgba(0,0,0,0.1);
+    border-radius: 50%;
+    content: '';
+    opacity: 0;
+    -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+    -moz-transition: -moz-transform 0.3s, opacity 0.3s;
+    transition: transform 0.3s, opacity 0.3s;
+    -webkit-transform: translateX(-50%) translateY(-50%) scale(0.2);
+    -moz-transform: translateX(-50%) translateY(-50%) scale(0.2);
+    transform: translateX(-50%) translateY(-50%) scale(0.2);
+  }
+
+
+  &:after {
+    width: 90px;
+    height: 90px;
+    border-width: 6px;
+    -webkit-transform: translateX(-50%) translateY(-50%) scale(0.8);
+    -moz-transform: translateX(-50%) translateY(-50%) scale(0.8);
+    transform: translateX(-50%) translateY(-50%) scale(0.8);
+  }
+
+  &:hover,
+  &:focus {
+    color: $primary-color !important;
+    &:after,
+    &:before {
+      opacity: 1;
+      -webkit-transform: translateX(-50%) translateY(-50%) scale(1);
+      -moz-transform: translateX(-50%) translateY(-50%) scale(1);
+      transform: translateX(-50%) translateY(-50%) scale(1);
+    }
   }
 }
