--- a/src/assets/scss/partials/_hero.scss
+++ b/src/assets/scss/partials/_hero.scss
@@ -11,13 +11,20 @@
 
   @include breakpoint(large) {
     padding-bottom: 100px;
-    clip-path: ellipse(149% 58% at 75% 42%);
+    clip-path: ellipse(149% 58% at 71% 42%);
   }
 
+
+
   .hero_top {
-    padding-top: 60px;
-    padding-bottom: 120px;
+    position: relative;
+    padding-top: 90px;
+    padding-bottom: 90px;
     text-align: center;
+    
+    .bg-tree {
+      @include tree(1, 68px, 10%, 100%);
+    }
 
     .hero_logo {
       width: 216px;
@@ -29,10 +36,13 @@
     p {
       font-size: rem-calc(36);
       font-family: $header-font-family;
-      line-height: 1.2em;
+      line-height: 1.4em;
   
       @include breakpoint(medium) {
         font-size: rem-calc(56);
+        max-width: 1027px;
+        margin-left: auto;
+        margin-right: auto;
       }
     }
   }
@@ -65,10 +75,11 @@
 
   .hero_bottom {
     position: relative;
+    margin: 0px auto;
     padding-top: 60px;
     padding-bottom: 90px;
-    background-image: url('/assets/img/trees_lines.svg');
-    background-size: contain;
+    background-image: url('/assets/img/tracks-1.svg');
+    background-size: 100%;
     background-repeat: no-repeat;
     background-position: center center;
 
@@ -77,7 +88,33 @@
       margin: 60px auto 0px auto;
       background-size: cover;
     } 
+
+    .bg-tree {
+      @include tree(1, 68px, 60%, 10%);
+
+      &:nth-of-type(2) {
+        @include tree(2, 48px, 55%, 13%);
+      }
+      
+      &:nth-of-type(3) {
+        @include tree(2, 48px, 15%, 83%);
+      }
+
+      &:nth-of-type(4) {
+        @include tree(1, 68px, 20%, 85%);
+      }
+
+      &:nth-of-type(5) {
+        @include tree(2, 48px, 18%, 88%);
+      }
+    }
     
+    // .tracks-image {
+    //   max-width: 1440px;
+    //   width: 100%;
+    //   margin: 0px auto;
+    // }
+
     .info_card {
       @include border-box;
       @include flex-align(center, middle);
@@ -109,7 +146,7 @@
 
       @include breakpoint(large) {
         position: absolute;
-        top: 50%;
+        top: 60%;
         left: 32%;
         @include translate(0, -50%);
         padding: 0px;
@@ -146,6 +183,63 @@
             background-color: $dark-gray;
             border-radius: 50%;
           }
+        }
+      }
+
+      @include breakpoint(xlarge) {
+        top: 60%;
+        left: 34%;
+      }
+
+      @include breakpoint(xxlarge) {
+        left: 35%;
+      }
+    }
+  }
+}
+
+.hero_nav {
+  .nav_item {
+    a {
+      position: relative;
+      &:before,
+      &:after {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 100px;
+        height: 100px;
+        border: 2px solid rgba(0,0,0,0.1);
+        border-radius: 50%;
+        content: '';
+        opacity: 0;
+        -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+        -moz-transition: -moz-transform 0.3s, opacity 0.3s;
+        transition: transform 0.3s, opacity 0.3s;
+        -webkit-transform: translateX(-50%) translateY(-50%) scale(0.2);
+        -moz-transform: translateX(-50%) translateY(-50%) scale(0.2);
+        transform: translateX(-50%) translateY(-50%) scale(0.2);
+      }
+
+
+      &:after {
+        width: 90px;
+        height: 90px;
+        border-width: 6px;
+        -webkit-transform: translateX(-50%) translateY(-50%) scale(0.8);
+        -moz-transform: translateX(-50%) translateY(-50%) scale(0.8);
+        transform: translateX(-50%) translateY(-50%) scale(0.8);
+      }
+
+      &:hover,
+      &:focus {
+        color: $primary-color;
+        &:after ,
+        &:before {
+          opacity: 1;
+          -webkit-transform: translateX(-50%) translateY(-50%) scale(1);
+          -moz-transform: translateX(-50%) translateY(-50%) scale(1);
+          transform: translateX(-50%) translateY(-50%) scale(1);
         }
       }
     }
