--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -18,7 +18,7 @@
 {{> body}}
 
 {{> footer}}
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.10.0/rellax.min.js"></script>
 <script src="{{root}}assets/js/app.js"></script>
 </body>
 </html>
