--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -31,10 +31,10 @@
 
 
   <div class="grid-x hero_bottom">
-    <span class="bg-tree"></span>
-    <span class="bg-tree"></span>
-    <span class="bg-tree"></span>
-    <span class="bg-tree"></span>
+    <span class="bg-tree" data-rellax-speed="1"></span>
+    <span class="bg-tree" data-rellax-speed="-1"></span>
+    <span class="bg-tree" data-rellax-speed="1.25" ></span>
+    <span class="bg-tree" data-rellax-speed="-1.125"></span>
     <span class="bg-tree"></span>
     <!-- <img src="/assets/img/tracks-1.svg" class="tracks-image"/> -->
     <div class="small-8 small-offset-2 medium-4 medium-offset-4 cell">
