Adding rellax file and updating some of the tree animations

--- a/src/partials/faqs.html
+++ b/src/partials/faqs.html
@@ -1,8 +1,8 @@
 <section class="faqs">
     <div class="grid-container">
       <span class="bg-tree"></span>
-      <span class="bg-tree" data-rellax-speed="2"></span>
-      <span class="bg-tree" data-rellax-speed="1.5"></span>
+      <span class="bg-tree" data-rellax-speed="-.75"></span>
+      <span class="bg-tree" data-rellax-speed=".5"></span>
 
       <div class="grid-x">
         <div class="medium-12 large-8 large-offset-2 cell faqs_header">  
