--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,7 +1,7 @@
 <section class="products">
   <div class="grid-container">
     <span class="bg-tree"></span>
-    <span class="bg-tree" data-rellax-speed="1.5"></span>
+    <span class="bg-tree" data-rellax-speed=".5"></span>
     <div class="grid-x grid-margin-x">
       <div class="medium-10 medium-offset-1 cell products_header" data-equalizer data-equalize-on="medium">
         <h2>
@@ -41,9 +41,9 @@
   </div>
   <div class="grid-x products_bottom">
     <span class="bg-tree"></span>
-    <span class="bg-tree" data-rellax-speed="elixer-product-shot-1"></span>
-    <span class="bg-tree" data-rellax-speed="-1"></span>
-    <span class="bg-tree" data-rellax-speed="1.5"></span>
+    <span class="bg-tree" data-rellax-speed="-.5"></span>
+    <span class="bg-tree" data-rellax-speed="-.25"></span>
+    <span class="bg-tree" data-rellax-speed=".25"></span>
 
     <div class="small-8 small-offset-2 medium-4 medium-offset-4 cell">
       <div class="info_card">
