--- a/src/assets/scss/partials/_footer.scss
+++ b/src/assets/scss/partials/_footer.scss
@@ -108,7 +108,6 @@
 
 .nav_link {
   position: relative;
-  &:before,
   &:after {
     position: absolute;
     top: 50%;
@@ -129,8 +128,8 @@
 
 
   &:after {
-    width: 90px;
-    height: 90px;
+    width: 50px;
+    height: 50px;
     border-width: 6px;
     -webkit-transform: translateX(-50%) translateY(-50%) scale(0.8);
     -moz-transform: translateX(-50%) translateY(-50%) scale(0.8);
@@ -140,8 +139,7 @@
   &:hover,
   &:focus {
     color: $primary-color !important;
-    &:after,
-    &:before {
+    &:after {
       opacity: 1;
       -webkit-transform: translateX(-50%) translateY(-50%) scale(1);
       -moz-transform: translateX(-50%) translateY(-50%) scale(1);
