--- a/src/assets/scss/partials/_hero.scss
+++ b/src/assets/scss/partials/_hero.scss
@@ -202,13 +202,13 @@
   .nav_item {
     a {
       position: relative;
-      &:before,
+
       &:after {
         position: absolute;
         top: 50%;
         left: 50%;
-        width: 100px;
-        height: 100px;
+        width: 50px;
+        height: 50px;
         border: 2px solid rgba(0,0,0,0.1);
         border-radius: 50%;
         content: '';
@@ -223,8 +223,8 @@
 
 
       &:after {
-        width: 90px;
-        height: 90px;
+        width: 50px;
+        height: 50px;
         border-width: 6px;
         -webkit-transform: translateX(-50%) translateY(-50%) scale(0.8);
         -moz-transform: translateX(-50%) translateY(-50%) scale(0.8);
@@ -234,8 +234,7 @@
       &:hover,
       &:focus {
         color: $primary-color;
-        &:after ,
-        &:before {
+        &:after {
           opacity: 1;
           -webkit-transform: translateX(-50%) translateY(-50%) scale(1);
           -moz-transform: translateX(-50%) translateY(-50%) scale(1);
