Adding a bit of a wiggle to the infoboxes

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -63,7 +63,7 @@
 @include motion-ui-transitions;
 @include motion-ui-animations;
 
-@import 'vendor/owlcarousel';
+@import 'vendor/animate';
 
 @import 'vendor/owlcarousel';
 @import 'util/mixins';
