--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -38,7 +38,7 @@
     <span class="bg-tree"></span>
     <!-- <img src="/assets/img/tracks-1.svg" class="tracks-image"/> -->
     <div class="small-8 small-offset-2 medium-4 medium-offset-4 cell">
-      <div class="info_card">
+      <div class="info_card animated delay-1s">
         <div class="info_card-wrapper">
           <img class="info_card-header" src="/assets/img/leadville_heading.svg" />
           <p class="info_card-description">Settled 1859 / Population 2759</p>
