--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -46,7 +46,7 @@
     <span class="bg-tree" data-rellax-speed=".25"></span>
 
     <div class="small-8 small-offset-2 medium-4 medium-offset-4 cell">
-      <div class="info_card">
+      <div class="info_card animated delay-1s">
         <div class="info_card-wrapper">
           <img class="info_card-header" src="/assets/img/harvey_headline.svg" />
           <p class="info_card-description">Yes! Harvey is a REAL person!</p>
